--- a/DIRETIVAS/diretivas-proj/src/app/card/card.component.html
+++ b/DIRETIVAS/diretivas-proj/src/app/card/card.component.html
@@ -1,1 +1,35 @@
+<h1>My App</h1>
 <p>card works!</p>
+<button>Olá Mundo</button>
+<ul>
+  <li *ngFor="let p of produtos; let i = index"
+    (click)= "remover(i)"
+  >
+    {{ i }} - {{ p }}
+  </li>
+  <button (click)="adicionar()">Adicionar</button>
+</ul>
+
+<div [ngSwitch]="menuType">
+  <div *ngSwitchDefault>
+    <ul>
+      <li>Editar Perfil</li>
+      <li>Adicionar Cartão</li>
+    </ul>
+  </div>
+  <div *ngSwitchCase="'admin'">
+    <ul>
+      <li>Editar Perfil</li>
+      <li>Adicionar Cartão</li>
+      <li>Gerenciar Usuários</li>
+    </ul>
+  </div>
+  <div *ngSwitchCase="'superUser'">
+    <ul>
+      <li>Editar Perfil</li>
+      <li>Adicionar Cartão</li>
+      <li>Gerenciar Usuários</li>
+      <li>Gerenciar Admins</li>
+    </ul>
+  </div>
+</div>
