concluindo aula de diretivas

--- a/DIRETIVAS/diretivas-proj/src/app/app.component.html
+++ b/DIRETIVAS/diretivas-proj/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-comp-atributos></app-comp-atributos>
+<app-comp-atributos>
+  <h2>Olá</h2>
+  <p>Eu vim em paz!</p>
+</app-comp-atributos>
 
 <app-card *ngIf="isAliveCard; else anotherBlock"></app-card>
 
