--- a/DIRETIVAS/diretivas-proj/src/app/comp-atributos/comp-atributos.component.html
+++ b/DIRETIVAS/diretivas-proj/src/app/comp-atributos/comp-atributos.component.html
@@ -2,6 +2,9 @@
 <button (click)="trocar()">Change</button>
 <h1 [ngStyle]="{'background': corFundo, 'color': corDaFonte}">CURSO ANGULAR</h1>
 
+<ng-content select="h2"></ng-content>
+<ng-content select="p"></ng-content>
+
 <h1>Lista de Compras</h1>
 <p>Adicione um item</p>
 <input type="text" [(ngModel)]="item">
@@ -11,5 +14,17 @@
 <ul>
   <li *ngFor="let elemento of lista">{{ elemento }}</li>
 </ul>
+
+<hr>
+
+<ng-template [ngIf]="isEnableBlock">
+  <a href="#">FINALIZAR COMPRA</a>
+</ng-template>
+
+<br>
+
+<ng-template [ngIf]="true">
+  <a href="#">ADICIONAR AO CARRINHO</a>
+</ng-template>
 
 <hr>
