Highlight active menu links with styling
Added 'activated' CSS class to visually indicate the active route in the menu. Updated HTML to use Angular's routerLinkActive directive for Home and Portfolio links, improving navigation feedback for users.

--- a/ROTAS/rotas/src/app/shared/menu/menu.component.html
+++ b/ROTAS/rotas/src/app/shared/menu/menu.component.html
@@ -1,10 +1,20 @@
 <div>
   <ul>
     <li>
-      <a [routerLink]="['/']">Home</a>
+      <a
+        [routerLink]="['/']"
+        [routerLinkActive]="['activated']"
+        [routerLinkActiveOptions]="{exact: true}">
+        Home
+      </a>
     </li>
     <li>
-      <a [routerLink]="['/portfolio']">Portfolio</a>
+      <a
+        [routerLink]="['/portfolio']"
+        [routerLinkActive]="['activated']"
+        [routerLinkActiveOptions]="{exact: true}">
+        Portfolio
+      </a>
     </li>
   </ul>
 </div>
