--- a/SERVICES/src/app/components/card/card.component.html
+++ b/SERVICES/src/app/components/card/card.component.html
@@ -1,1 +1,15 @@
-<p>card works!</p>
+<div class="card">
+
+  <div class="card__title">
+    <h3>CHARMANDER</h3>
+  </div>
+
+  <div class="card__body">
+    <img src="" alt="pokemon">
+  </div>
+
+  <div class="card__stats">
+    <span class="card__stats__type"></span>
+  </div>
+
+</div>
