Enhance card component styling and stats display
Updated card.component.css to improve visual appearance with background color, border radius, and styled stats. Modified card.component.html to display multiple 'FIRE' stat types within the card stats section.

--- a/SERVICES/src/app/components/card/card.component.html
+++ b/SERVICES/src/app/components/card/card.component.html
@@ -9,7 +9,9 @@
   </div>
 
   <div class="card__stats">
-    <span class="card__stats__type"></span>
+    <span class="card__stats__type">FIRE</span>
+    <span class="card__stats__type">FIRE</span>
+    <span class="card__stats__type">FIRE</span>
   </div>
 
 </div>
