--- a/SERVICES/src/app/components/card/card.component.css
+++ b/SERVICES/src/app/components/card/card.component.css
@@ -2,9 +2,39 @@
   border: 1px solid black;
   width: 250px;
   height: 350px;
+  background-color: #232323;
+  border-radius: 10px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.card__title > h3 {
+  color: white;
+}
+
+.card__body {
+  background-color: #616161;
+  width: 90%;
+  height: 70%;
+  margin: 0 auto;
+}
+
+.card__stats {
+  padding-top: 10px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+
+.card__stats__type {
+  color: white;
+  background-color: coral;
+  border-radius: 5px;
+  padding: 5px;
+  margin-right: 5px;
 }
 
