--- a/SERVICES/src/app/components/card/card.component.css
+++ b/SERVICES/src/app/components/card/card.component.css
@@ -31,7 +31,8 @@
 
 
 .card__stats__type {
-  color: white;
+  color: black;
+  font-weight: bold;
   background-color: coral;
   border-radius: 5px;
   padding: 5px;
