--- a/SERVICES/src/app/components/card/card.component.html
+++ b/SERVICES/src/app/components/card/card.component.html
@@ -1,19 +1,19 @@
 <div class="card">
 
   <div class="card__title">
-    <h3>{{ pokemon?.name }}</h3>
+    <h3>{{ pokemon.name }}</h3>
   </div>
 
   <div class="card__body">
-    <img [src]="pokemon?.sprites?.front_default" alt="pokemon">
+    <img [src]="pokemon.sprites.front_default" alt="pokemon">
   </div>
 
   <div class="card__stats">
     <span
       class="card__stats__type"
-      *ngFor="let type of attributesTypes"
+      *ngFor="let t of pokemon.types"
     >
-      {{ type }}
+      {{ t.type.name }}
     </span>
   </div>
 
