--- a/SERVICES/src/app/components/card/card.component.html
+++ b/SERVICES/src/app/components/card/card.component.html
@@ -3,7 +3,7 @@
 <div class="card">
 
   <div class="card__title">
-    <h3>{{ pokemon.name }}</h3>
+    <h3>{{ pokemon.name | transformador: 'Einstein':'123'}}</h3>
   </div>
 
   <div class="card__body">
@@ -15,7 +15,7 @@
       class="card__stats__type"
       *ngFor="let t of pokemon.types"
     >
-      {{ t.type.name }}
+      {{ t.type.name | uppercase }}
     </span>
   </div>
 
